--- a/src/views/root-layout/components/root-layout-header/components/root-layout-header-lng-switcher/styles/mixins.scss
+++ b/src/views/root-layout/components/root-layout-header/components/root-layout-header-lng-switcher/styles/mixins.scss
@@ -1,7 +1,7 @@
 @mixin switcher-animation($name) {
-  animation: #{$name} 0.7s ease-out both;
+  animation: #{$name} var(--switcher-animation-duration) ease-out both;
 }
 
 @mixin locale-color-animation($name) {
-  animation: #{$name} 0.4s linear 0.2s both;
+  animation: #{$name} var(--locale-color-animation-duration) linear var(--locale-color-animation-delay) both;
 }
